# keboli-backend

./: .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  deploy.sh  generate_api_docs.py  pyproject.toml  requirements.txt  start.sh
.github/workflows/: deploy.yml
backend/: Dockerfile
backend/keboli/: main.py  pyproject.toml
backend/src/: main.py
backend/src/constants/: enums.py
backend/src/schemas/: assessment_schema.py  candidate_schema.py
docs/: API_Documentation.md  openapi.json
src/: main.py
src/api/middleware/: cors.py  error_handler.py  logging.py
src/api/rest/: app.py  dependencies.py
src/config/: settings.py
src/constants/: enums.py
src/core/: exceptions.py
src/core/security/: jwt.py  password.py  roles.py
src/core/services/: assessment_service.py  auth_service.py  candidate_service.py  email_service.py  evaluation_service.py  health_service.py  interview_service.py  invitation_service.py  livekit_service.py  log_service.py  notification_service.py  registration_service.py
src/core/utils/: file_processing.py
src/data/clients/: __init__.py
src/data/database/: session.py
src/data/migrations/: env.py
src/data/models/: __init__.py  assessment.py  base.py  candidate.py  evaluation.py  interview_session.py  invitation.py  notification.py  organization.py  recruiter.py  system_log.py  transcript.py
src/data/repositories/: assessment_repo.py  auth_repo.py  candidate_repo.py  evaluation_repo.py  interview_repo.py  interview_transcript_repo.py  invitation_repo.py  log_repo.py  notification_repo.py
src/handlers/audio/: deepgram_stt.py  deepgram_tts.py  ffmpeg_pipe.py  silence_detector.py
src/schemas/: assessment_schema.py  auth_schema.py  candidate_schema.py  evaluation_schema.py  invitation_schema.py  system_log_schema.py
src/utils/: __init__.py
(+57 files in other folders)
