[project]
name = "backend"
version = "0.1.0"
description = "Keboli AI Interview Platform - Backend Service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt==4.0.1",
    "deepgram-sdk==5.2.0",
    "fastapi>=0.131.0",
    "groq>=1.0.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.13.1",
    "pymupdf>=1.27.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "sqlalchemy>=2.0.46",
    "sqlalchemy-utils>=0.42.1",
    "structlog>=25.5.0",
    "uvicorn>=0.41.0",
    "websockets>=16.0",
    "livekit-api>=0.8.0",
    "sendgrid>=6.12.5",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
]

[tool.uv.workspace]
members = [
    "keboli",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "N", "SIM", "C4"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"src/data/migrations/env.py" = ["E402", "F403", "F405"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
disallow_untyped_defs = true
disallow_any_generics = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
